test/Fail/Issue7751.err
Issue7751.agda:6.1-8.9: error: [TerminationIssue]
Termination checking failed for the following function:
  Bad
Problematic call:
  Bad
    (at Issue7751.agda:7.8-11)
